# minijvm

./: .gitignore  LICENSE  README.md
MiniJVM/: CMakeLists.txt  clean.sh  main.cpp
MiniJVM/Clazz/: clazz_reader.cpp  compressed_file_reader.cpp
MiniJVM/MiniJVM/: CMakeLists.txt  MiniJVM.cpp  MiniJVM.h
MiniJVM/Util/: buffer.cpp  string_utils.cpp
MiniJVM/clazz/: bootstrap_classloader.cpp  clazz_reader.cpp  compressed_file_reader.cpp
MiniJVM/include/: attribute.h  base_type.h  bootstrap_classloader.h  buffer.h  clazz_reader.h  compressed_file_reader.h  configurations.h  java_class_common.h  log.h  platform.h  string_utils.h  strings.h  system.h  vm.h  vm_class.h  vm_classloader.h  vm_constant_pool.h  vm_engine.h  vm_field.h  vm_heap.h  vm_method.h  vm_method_area.h  vm_module.h  vm_thread.h
MiniJVM/include/native/: java_lang_Class.h  java_lang_Object.h  java_lang_System.h
MiniJVM/include/zip/: miniz.h
MiniJVM/natives/: java_lang_Class.cpp  java_lang_Object.cpp  java_lang_System.cpp
MiniJVM/testclasses/icu/mianshi/main/: HelloMiniJvm.java
MiniJVM/thirdparties/zip/: zip.c
MiniJVM/util/: buffer.cpp  configurations.cpp  string_utils.cpp  system.cpp
MiniJVM/vm/: vm.cpp  vm_class.cpp  vm_classloader.cpp  vm_engine.cpp  vm_engine_definition.cpp  vm_engine_private.cpp  vm_heap.cpp  vm_method_area.cpp  vm_module.cpp  vm_native_methods.cpp  vm_thread.cpp
MiniJVM/windows/pthread/Win32/: pthreads.exp  pthreads.lib
MiniJVM/windows/pthread/Win64/: pthreads.exp  pthreads.lib
